fixing the 'agile software' heading title to be aligned with the picture. UX says so.

--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ header {
 }
 .top .content h1 {
 	font-size: 72px;
-	margin-top: 50px;
+	margin-top: 0px;
 }
 .top .content h2 {
 	font-size: 32px;
